--- a/public/style.css
+++ b/public/style.css
@@ -12,10 +12,11 @@
 .container {
   width: 100%;
   height: 100vh;
-  background-image: url(./img/5080255.webp);
+  background-image: url(./img/back.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  
 }
 .nav-bare {
   display: flex;
@@ -83,37 +84,100 @@ border-bottom-right-radius: 50px;
   font-weight: 400;
   color: white;
   transition: 0.5s ease-in-out;
+  cursor: pointer;
 }
 .left-nav button:hover {
   background-color: #094c9e;
 }
+.section {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 75%;
+  background-color: #ffffff9f;
+  height: auto;
+  padding: 100px 50px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 50px;
+}
 
-.section{
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
-    width: 75%;
-    background-color:  #4480ca;
-    height: auto;
-    padding: 100px 50px ;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 50px;
-    border: 5px solid #cea25c9a;
+.section::after {
+  content: '';
+  display: block;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  background-color: #ffffff83;
+  height: 100%;
+  border-radius: 50px;
+  filter: blur(6px);
+  z-index: 1; /* Ensure this is behind the content */
 }
-.section .info{
-    margin-left: 6%;
+
+.section h1 {
+  font-size: 50px;
+  font-weight: bold;
+  text-transform: capitalize;
+  padding: 10px 0;
+  color: #042a59;
+
 }
-.section h1{
-    font-size: 50px;
-    font-weight: bold;
-    text-transform: capitalize;
-    padding: 10px 0px;
+
+.section .info {
+  margin-left: 6%;
 }
-.section p{
-    margin-left: 30px;
-    font-size: 20px;
-    font-weight: 400;
-    color: #7777;
+
+.section p {
+  margin-left: 30px;
+  font-size: 20px;
+  font-weight: 400;
+  color: #042a599a;
+}
+
+.front {
+  position: relative;
+  z-index: 2;
+}
+
+.input-container {
+  margin-top: 3%;
+  background-color: #042a59;
+  padding: 10px;
+  border-radius: 6px;
+}
+
+.frist {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#cities_from , #cities_to {
+  width: 35%;
+  background: transparent;
+  color: white;
+  border: 1px solid white;
+  padding: 5px;
+  border-radius: 8px;
+
+}
+
+#cities_from option, #cities_to option {
+
+  background: #042a59;
+  color: white;
+
+
+}
+.ser {
+  width: 20%;
+  border-radius: 4px;
+  font-weight: 600;
+  cursor: pointer;
+  padding: 6px;
 }
